packages/flow-type-tests/__tests__/fixtures/fixture-with-wrapper-typed.0.115.0.txt
Error ------------------------------------------- packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:19:1

Cannot create `Bar` element because property `bar` is missing in props [1] but exists in props [2].

   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:19:1
   19| <Bar />; // missing foo and bar
       ^^^^^^^ [1]

References:
   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:13:7
   13|       <StyledComponent {...props} />
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------- packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:22:1

Cannot create `Bar` element because property `bar` is missing in props [1] but exists in props [2].

   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:22:1
   22| <Bar foo="foo" />; // missing bar
       ^^^^^^^^^^^^^^^^^ [1]

References:
   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:13:7
   13|       <StyledComponent {...props} />
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------- packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:25:1

Cannot create `Bar` element because property `foo` is missing in props [1] but exists in props [2].

   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:25:1
   25| <Bar bar="bar" />; // missing foo
       ^^^^^^^^^^^^^^^^^ [1]

References:
   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:13:7
   13|       <StyledComponent {...props} />
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------- packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:34:1

Cannot create `Baz` element because property `foo` is missing in props [1] but exists in props [2].

   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:34:1
   34| <Baz bar="bar" baz="baz" />; // Missing foo
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:13:7
   13|       <StyledComponent {...props} />
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------- packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:36:1

Cannot create `Baz` element because string [1] is incompatible with string literal `foo` [2] in property `foo`.

   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:36:1
   36| <Baz foo="notfoo" bar="bar" baz="baz" />; // Wrong foo
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:36:10
   36| <Baz foo="notfoo" bar="bar" baz="baz" />; // Wrong foo
                ^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:6:41
    6| const Foo = styled("div", (props: {foo: "foo"}) => ({
                                               ^^^^^ [2]


Error ------------------------------------------- packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:38:1

Cannot create `Baz` element because property `bar` is missing in props [1] but exists in props [2].

   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:38:1
   38| <Baz foo="foo" baz="baz" />; // Missing bar
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:13:7
   13|       <StyledComponent {...props} />
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------- packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:40:1

Cannot create `Baz` element because string [1] is incompatible with string literal `bar` [2] in property `bar`.

   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:40:1
   40| <Baz foo="foo" bar="notbar" baz="baz" />; // Wrong bar
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:40:20
   40| <Baz foo="foo" bar="notbar" baz="baz" />; // Wrong bar
                          ^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:11:48
   11|   StyledComponent => (props: {foo: "foo", bar: "bar"}) => (
                                                      ^^^^^ [2]


Error ------------------------------------------- packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:42:1

Cannot create `Baz` element because property `baz` is missing in props [1] but exists in object type [2].

   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:42:1
   42| <Baz foo="foo" bar="bar" />; // Missing baz
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:29:36
   29| const Baz = withStyle(Bar, (props: {foo: "foo", bar: "bar", baz: "baz"}) => ({
                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------- packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:44:1

Cannot create `Baz` element because string [1] is incompatible with string literal `baz` [2] in property `baz`.

   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:44:1
   44| <Baz foo="foo" bar="bar" baz="notbaz" />; // Wrong baz
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:44:30
   44| <Baz foo="foo" bar="bar" baz="notbaz" />; // Wrong baz
                                    ^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/with-wrapper-typed.js:29:66
   29| const Baz = withStyle(Bar, (props: {foo: "foo", bar: "bar", baz: "baz"}) => ({
                                                                        ^^^^^ [2]



Found 9 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
